--- a/pom.xml
+++ b/pom.xml
@@ -392,6 +392,12 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-cas-client</artifactId>
 			<version>${spring.security.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>cas-client-core</artifactId>
+					<groupId>org.jasig.cas</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
