--- a/src/main/resources/conf/app.properties
+++ b/src/main/resources/conf/app.properties
@@ -98,25 +98,25 @@ smsAccount=
 smsPassword=
 
 #短信网关地址
-cloudSmsUrl=http://gbk.sms.webchinese.cn
+cloudSmsUrl=
 #已申请的用户id
-cloudSmsAccount=ziapple
+cloudSmsAccount=
 #账号密码
-cloudSmsKey=3930aa1ecae6e22b7868
+cloudSmsKey=
 
 #发送系统错误信息至邮箱
-recieveAdress=tzwservice@163.com
+recieveAdress=
 #错误报告中心 邮箱的相关配置
-sendMail=tzwservice@163.com
-host=smtp.163.com
+sendMail=
+host=
 port=25
 
 #Ldap connect configuration
 ldapUrl=ldap://192.168.1.11:389
-ldapBase=dc=hotent,dc=com
-ldapUserDn=hotent@hotent.com
-ldapPassword=hotent123
-ldapPooled=true
+ldapBase=
+ldapUserDn=
+ldapPassword=
+ldapPooled=
 #Ldap数据同步策略：1-以Ad数据优先；2-只导入Ad数据，之后完全同系统管理。
 ldapStrategy=1
 
